@@ -9,6 +9,7 @@
 
 <!-- ###LIST_GROUPS### begin -->
 <div>
+	###pageBrowser###
 	<div id="tx-community-grouplist">
 		<!-- ###LOOP:GROUPS### begin -->
 		<!-- ###LOOP_CONTENT### -->
@@ -19,6 +20,7 @@
 		<!-- ###LOOP_CONTENT### -->
 		<!-- ###LOOP:GROUPS### end -->
 	</div>
+	###pageBrowser###
 </div>
 <!-- ###LIST_GROUPS### end -->
 
