@@ -271,6 +271,18 @@ plugin.tx_community {
 
 		userList {
 			templateFile = EXT:community/resources/templates/userlist/index.htm
+			pageBrowser < plugin.tx_pagebrowse_pi1
+			pageBrowser {
+				pageParameterName = tx_communitymessages|page
+				numberOfEntriesPerPage = 10
+				disableCacheHash = 1
+				_LOCAL_LANG.de {
+					text_first = &laquo;Erste Seite
+					text_prev = &lsaquo;Vorherige Seite
+					text_next = Nächste Seite&rsaquo;
+					text_last = Letzte Seite&raquo;
+				}
+			}
 		}
 
 		privacy {
@@ -297,6 +309,18 @@ plugin.tx_community {
 			}
 			templateFile = EXT:community/resources/templates/listgroups/index.htm
 			listType	 = allGroups
+			pageBrowser < plugin.tx_pagebrowse_pi1
+			pageBrowser {
+				pageParameterName = tx_communitymessages|page
+				numberOfEntriesPerPage = 10
+				disableCacheHash = 1
+				_LOCAL_LANG.de {
+					text_first = &laquo;Erste Seite
+					text_prev = &lsaquo;Vorherige Seite
+					text_next = Nächste Seite&rsaquo;
+					text_last = Letzte Seite&raquo;
+				}
+			}
 		}
 
 		editGroup {
