@@ -1,3 +1,7 @@
+2008-12-03 Frank Naegler  <typo3@naegler.net>
+
+	* adding pagebrowser to groupList
+
 2008-12-02 Frank Naegler  <typo3@naegler.net>
 
 	* adding new widget: MyFriends for the userProfile
